k8s/traefik/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik
spec:
  strategy:
    type: Recreate
  progressDeadlineSeconds: 10
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: docker.io/library/traefik:v2.0
          args:
            #- --api
            #- --api.dashboard=true
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd                 # traefik-IngressRoute crd
            #- --providers.kubernetesingress=true       # k8s ingress
            - --certificatesresolvers.default.acme.tlschallenge=true
            - --certificatesresolvers.default.acme.email=123@qq.com
            - --certificatesresolvers.default.acme.storage=acme.json
            # Let's Encrypt server.测试证书签发api,正式环境请注释
            - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: websecure
              containerPort: 443
              hostPort: 443
            - name: admin
              containerPort: 8080
              #hostPort: 8080

---
