k8s/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default

spec:
  selector:
    app: traefik
  ports:
    #- protocol: TCP
    #  name: web
    #  port: 80
    - protocol: TCP
      name: admin
      port: 8080
    #- protocol: TCP
    #  name: websecure
    #  port: 443

---
